added a image to the form

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 		<div>
 			<label for="password">Password</label>
 			<input type="password" password="password"></div>
+			<div>
+			<label for="url">URL</label>
+			<input type="url" name"url" id="url">
+			<image src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F20%2F2019%2F09%2Fgrizzly-bear.jpg&q=85"></image>
+			 </div>>
 			<button>Submit</button>
 	</form>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
